--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="John Doe - Software Engineer Portfolio. Showcasing work experience, projects, education and hobbies." />
+    <meta name="description" content="Benjamin Liu - Software Engineer Portfolio. Showcasing work experience, projects, education and hobbies." />
     <meta name="keywords" content="software engineer, web developer, portfolio, projects, javascript, vue, react" />
-    <meta name="author" content="John Doe" />
+    <meta name="author" content="Benjamin Liu" />
     
     <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
-    <title>John Doe | Software Engineer Portfolio</title>
+    <title>Benjamin Liu | Software Engineer Portfolio</title>
   </head>
   <body>
     <div id="app"></div>
