add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Enhanced viewport settings for better mobile support -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, viewport-fit=cover" />
     <meta name="description" content="Benjamin Liu - Software Engineer Portfolio. Showcasing work experience, projects, education and hobbies." />
     <meta name="keywords" content="software engineer, web developer, portfolio, projects, javascript, vue, react" />
     <meta name="author" content="Benjamin Liu" />
+    
+    <!-- Mobile-specific meta tags -->
+    <meta name="theme-color" content="#3498db" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Ben Liu" />
+    <meta name="format-detection" content="telephone=no" />
     
     <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
